# myshellScript

./: .gitignore  conda.sh  docker.sh  opencv_default.sh  opencv_from_source.sh  openvino.sh  qt6_x64_install.sh  wget-log  wsl_cuda.sh  wsl_cuda113.sh  wsl_nvidia_docker.sh  wsl_vscode.sh
cmake_qt6_console_app/: CMakeLists.txt  build.sh  main.cpp
